[package]
name = "fluere"
version = "0.7.1-dev"
authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]
edition = "2024"
description = "Cross Platform Packet Capture, pcap to Netflow Conversion, Live Netflow Capture Tool"
readme = "README.md"
license = "Apache-2.0"
keywords = ["netflow", "fluereflow","cross-platform", "netflow-collector", "network-security"]
categories = ["network-programming"]
repository = "https://github.com/SkuldNorniern/fluere"

[dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
tokio = { version = "1.40", features = ["full", "macros", "rt-multi-thread"] }
pnet = { version = "0.35", features = ["std"] }
pnet_macros_support = "0.35"
pnet_macros = "0.35"

# using custom forked version of pcap-rs for fixing audits
# pcap = { version = "1.1.0", git = "https://github.com/SkuldNorniern/pcap", rev = "40f1163" }

pcap = "2.3.0"

chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = "0.2"
csv = "1.3"
nom = "8.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"

fluere_plugin = { version = "0.2.0", path = "./fluere-plugin", features = ["log"] }
fluere-config = { version = "0.2.0", path = "./fluere-config", features = ["log"] }
fluereflow = { version = "0.3.2", path = "./fluereflow" }

ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.29"
dirs = "6.0"
log = { version = "0.4", features = ["std"]}
indicatif = "0.18"

[lints.clippy]
unwrap_used = "deny"
cognitive_complexity = "deny"

[workspace]
members = [
  "fluere-plugin",
  "fluere-config",
  #"fluere-plugin-trait",
  "fluereflow",
]

[package.metadata.rpm]
package = "fluere"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
fluere = { path = "/usr/bin/fluere" }

[package.metadata.generate-rpm.requires]
libpcap = "*"
openssl = "*"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/fluere", dest = "/usr/bin/fluere", mode = "755" },
]

[profile.release]
lto = 'fat'
opt-level = 3
