[package]
name = "fluere-config"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Configuration manager for Fluere."
license = "Apache-2.0"
keywords = ["netflow", "fluereflow","fluere", "network"]
repository = "https://github.com/SkuldNorniern/fluere"

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.186", features = ["derive"]}
toml = "0.7.6"

[lib]
name = "fluere_config"

