[package]
name = "fluere-config"
version = "0.1.3"
edition = "2021"
readme = "README.md"
description = "Configuration manager for Fluere."
license = "Apache-2.0"
keywords = ["netflow", "fluereflow","fluere", "network"]
categories = ["network-programming"]
repository = "https://github.com/SkuldNorniern/fluere"

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.193", features = ["derive"]}
toml = "0.8.8"

[lib]
name = "fluere_config"

