[package]
name = "fluere_plugin"
version = "0.1.0"
authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]
edition = "2021"
description = "Plugin API for Fluere."
readme = "README.md"
license = "Apache-2.0"
keywords = ["netflow", "fluereflow","fluere", "network"]
repository = "https://github.com/SkuldNorniern/fluere"




[dependencies]
tokio = { version = "1.32", features = ["full","macros", "rt-multi-thread"] }
fluere-config = { version = "0.1.0", path = "../fluere-config" }
#fluere-plugin-trait = { path = "../fluere-plugin-trait" }
fluereflow = { version = "0.3.1", path = "../fluereflow" }
dirs = "5.0.1"
mlua = { version = "0.9.1", features = ["lua54", "vendored","async","send"] }

[lib]
name = "fluere_plugin"
