[package]
name = "fluere_plugin"
version = "0.2.0"
authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]
edition = "2021"
description = "Plugin API for Fluere."
readme = "README.md"
license = "Apache-2.0"
keywords = ["netflow", "fluereflow","fluere", "network"]
categories = ["network-programming"]
repository = "https://github.com/SkuldNorniern/fluere"




[dependencies]
git2 = { version = "0.18.3", default-features = false, features = ["https", "vendored-libgit2"]}
tokio = { version = "1.36", features = ["full","macros", "rt-multi-thread"] }
fluere-config = { version = "0.2.0", path = "../fluere-config" }
#fluere-plugin-trait = { path = "../fluere-plugin-trait" }
fluereflow = { version = "0.3.2", path = "../fluereflow" }
dirs = "5.0.1"
mlua = { version = "0.9.6", features = ["lua54", "vendored","async","send"] }
inksac = "0.4.0"

log = { version = "0.4.21", features = ["std"], optional = true }

[lib]
name = "fluere_plugin"


[features]
log = ["dep:log"]
