[package]
name = "fluereflow"
version = "0.2.1"
authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]
edition = "2021"
description = "Customized flow feature inspired by netflow and cicflowmeter."
readme = "README.md"
license = "Apache-2.0"
keywords = ["netflow", "fluereflow"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
